fix: fix ext-links on mobile

--- a/pageStyle/index.css
+++ b/pageStyle/index.css
@@ -69,7 +69,11 @@
         align-items: center;
         padding: 16px 0;
         gap: 16px;
-        width: 60%;
+        width: 80%;
+
+        @media (min-width: 600px) {
+            width: 60%;
+        }
 
         & > * {
             width: 100%;
@@ -83,6 +87,7 @@
             background-color: var(--light-secondary);
             color: var(--light-secondary-foreground);
             border-radius: 8px;
+            white-space: nowrap;
         }
 
         :first-child {
